--- a/Ehelp/View/Base.lproj/Main.storyboard
+++ b/Ehelp/View/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                             <constraint firstAttribute="height" constant="30" id="O3J-JV-jm1"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" textContentType="email"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" enablesReturnKeyAutomatically="YES" textContentType="email"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a0m-L2-BvV">
                                         <rect key="frame" x="0.0" y="42" width="290" height="30"/>
